mock-aws-backend-java/kustomize/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-processing-app-service
spec:
  selector:
    app: sample-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo-port
      protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None
