mock-aws-backend-java/kustomize/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pipeline-processing-ingress-egress
spec:
  podSelector:
    matchLabels:
      app: pipeline-processing-app
  policyTypes:
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pipeline-kafka-broker
      ports:
        - protocol: TCP
          port: 9092  

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: pipeline-kafka-broker
      ports:
        - protocol: TCP
          port: 9092
